packages/shared-skills/skills/programming/fixtures/java/no-excuse/fail/raw-type/RawTypeCase.java
package sample.bad;

import java.util.List;

class RawTypeCase {
    private List names;
}
